[modify] 반응형 수정

--- a/src/components/academy/Partnership.css
+++ b/src/components/academy/Partnership.css
@@ -34,7 +34,7 @@
 }
 @media screen and (max-width: 767px) {
   .orderPage-bigTitle h3,
-  span {
+  .orderPage-bigTitle span {
     width: 40vw;
   }
 
