[ modify ] 선택필수 설정

--- a/src/components/mypage/Management.css
+++ b/src/components/mypage/Management.css
@@ -198,6 +198,14 @@
     font-weight: lighter;
     font-style: italic;
   }
+
+  #managerRequired {
+    color: #f01;
+    font-size: 10px;
+    margin-left: 10px;
+  }
+
+
 }
 
 
