--- a/src/components/mypage/AccountWithdrawal.css
+++ b/src/components/mypage/AccountWithdrawal.css
@@ -63,8 +63,14 @@
   margin-top: 30px;
 }
 
-.account-contentBox .form Label {
-  
+.account-contentBox label {
+  margin-bottom: 10px;
+}
+
+#withdrawal::placeholder {
+  font-size: 14px;
+  color: #999;
+  font-weight: lighter;
 }
 
 
