[ modify ] 교육관리자 옵션선택시 부가정보2 필수입력

--- a/src/components/mypage/Management.css
+++ b/src/components/mypage/Management.css
@@ -205,6 +205,18 @@
     margin-left: 10px;
   }
 
+  .requirespan {
+    color: #f01;
+    font-size: 10px;
+    margin-left: 10px;
+    display: none;
+  }
+
+  .requirespan::before {
+    content: '*';
+    display: inline-block;
+  }
+
 
 }
 
