--- a/src/components/academy/TeacherInfo.css
+++ b/src/components/academy/TeacherInfo.css
@@ -1,26 +1,42 @@
-.teacher-list {
-  margin-top: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.teacherinfo-content ul {
+margin: 0;
 }
 
-.bottomBoxBanner {
-  width: 100%;
-  height: 200px;
-  margin: 40px 0;
-}
-.bottomBoxBanner img {
-  width: 100%;
-  height: 200px;
-}
-@media screen and (max-width: 767px) {
+/* PC  CSS */
+@media screen and (min-width:768px) {
+  /* ul */
   .teacher-list {
-    padding-left: 20px;
+    width: inherit;
+    margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
+
+  .bottomBoxBanner {
+    width: 100%;
+    height: 200px;
+    margin: 40px 0;
+  }
+  .bottomBoxBanner img {
+    width: 100%;
+    height: 200px;
+  }
+
+}
+
+/* 모바일  CSS */
+@media screen and (max-width:767px) {
+
+  .teacher-list {
+    width: 90vw;
+    margin: 0 10vw;
+    display: flex;
+    flex-direction: column;
+    padding-left: 5vw;
+  }
+
+
   .Bottom-bannerImg3 img {
     width: 100%;
     height: 150px;
