--- a/src/components/academy/TeacherInfo.css
+++ b/src/components/academy/TeacherInfo.css
@@ -2,6 +2,37 @@
 margin: 0;
 }
 
+.t_bigTitle {
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: #266f37;
+  opacity: 0.9;
+}
+
+.t_bigTitle b {
+  color: #fff;
+  height: 30px;
+  font-size: 35px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+
+}
+
+.t_h3 {
+  font-size: 14px;
+}
+
+.t_span {
+  color: #fff;
+  width: 1000px;
+  height: 30px;
+  font-size: 20px;
+}
+
+
+
 /* PC  CSS */
 @media screen and (min-width:768px) {
   /* ul */
