[ modify ] 강사소개 타이틀 수정

--- a/src/components/academy/TeacherInfo.css
+++ b/src/components/academy/TeacherInfo.css
@@ -5,7 +5,7 @@ margin: 0;
 .t_bigTitle {
   align-items: center;
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 150px;
   background-color: #266f37;
   opacity: 0.9;
